[tool.poetry]
name = "ddd-chat"
version = "0.1.0"
description = ""
authors = ["rivan <rivan_git@mail.ru>"]
readme = "README.md"
packages = [{include = "ddd_chat"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
motor = "^3.3.2"
uvicorn = "^0.29.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
